--- a/mosaiq/ingredients.html
+++ b/mosaiq/ingredients.html
@@ -1,17 +1,16 @@
 <link rel="stylesheet" type="text/css" href="https://www.skincarebyalana.com/img/pages/catpage.css">
 <div id="header">
-	<div id="back"><a href="https://www.skincarebyalana.com/vertere.html">BACK</a></div>
+	<div id="back"><a href="https://www.skincarebyalana.com/mosaiq.html">BACK</a></div>
 	<h2>Mosaiq Ingredients</h2>
 	<img src="https://www.skincarebyalana.com/img/logos/mosaiq.jpg" alt="Vertere Logo">
 </div>
 <div id="content">
-	<p><img src="images/mosaiq_ingredients_03.jpg" width="287" height="444" style="float: left;"  alt=""/><img src="images/mosaiq_ingredients_04.jpg" width="485" height="257" alt=""/></p>
-  <p>Ingredients, With You In Mind</p>
+	<div><img src="/img/pages/mosaiq/mosaiq_ingredients_03.jpg" width="287" height="444" style="float: left;"  alt=""/><img src="/img/pages/mosaiq/mosaiq_ingredients_04.jpg" width="485" height="257" alt=""/></div>
+  <h3>Ingredients, With You In Mind</h3>
 	<p>Mosaiq's products are carefully tailored using only the finest components. From their soy blend of wax, hand blown glass and delicate packaging to their rich personal care formulas and fragrances wich contain essential oils. Each products is mindfully created. </p>
-	<p>&nbsp;</p>
-	<p>&nbsp;</p>
-	<p><img src="images/mosaiq_ingredients_06.jpg" width="772" height="194" style="clear: left" alt=""/></p>
+
+	<div><img src="/img/pages/mosaiq/mosaiq_ingredients_06.jpg" width="772" height="194" style="clear: left" alt=""/></div>
 	</p>
-  <div id="shop"><a href="https://www.skincarebyalana.com/vertere.html">Shop Mosaiq</a></div>
+  <div id="shop"><a href="https://www.skincarebyalana.com/mosaiq.html">Shop Mosaiq</a></div>
 </div>
 </div>
