--- a/obagi/about.html
+++ b/obagi/about.html
@@ -5,10 +5,42 @@
 	<img src="https://www.skincarebyalana.com/img/logos/obagi-logo.png" alt="Obagi Logo">
 </div>
 <div id="content">
-	
-	<p><strong>Obagi Medical Products, Inc.</strong>, is a global specialty pharmaceutical company founded
-by leading skin care experts in 1988, and is now owned by Valeant Pharmaceuticals International, Inc. Obagi® products are designed to minimize the appearance of premature skin aging, skin damage, hyperpigmentation, acne, and sun damage and are primarily available through dermatologists, plastic surgeons, medical spas, and skin care physicians.</p>
-	<img style="margin: 10 auto;" src="https://www.skincarebyalana.com/img/pages/obagi/obagi-about.jpg" alt="Obagi">
+
+<div class="flex">
+	<div style="width: 340px;">
+	<h3 style="text-align: center;">Obagi-C Rx</h3>
+	<img style="margin: auto;" src="https://www.skincarebyalana.com/img/pages/obagi/obagi-beforeandafter_1.jpg" alt="Obagi">
+	<br />
+	<div id="shop"><a href="https://www.skincarebyalana.com/obagi/obagi-c-rx-systems.html">VIEW OBAGI-C RX</a></div>
+	<br />
+	</div>
+
+		<div style="width: 340px;">
+	<h3 style="text-align: center;">CLENZIderm M.D. System</h3>
+	<img style="margin: auto;" src="https://www.skincarebyalana.com/img/pages/obagi/obagi-beforeandafter_2.jpg" alt="Obagi">
+	<br />
+	<div id="shop"><a href="https://www.skincarebyalana.com/obagi/obagi-clenziderm-md-systems.html">CLENZIDERM M.D.</a></div>
+	<br />
+	</div>
+
+		<div style="width: 340px;">
+	<h3 style="text-align: center;">Blue Peel</h3>
+	<img style="margin: auto;" src="https://www.skincarebyalana.com/img/pages/obagi/obagi-beforeandafter_3.jpg" alt="Obagi">
+	<br />
+	<div id="shop"><a href="https://www.skincarebyalana.com/obagi.html">VIEW BLUE PEEL</a></div>
+	<br />
+	</div>
+
+		<div style="width: 340px;">
+	<h3 style="text-align: center;">ELASTIderm Eye Products</h3>
+	<img style="margin: auto;" src="https://www.skincarebyalana.com/img/pages/obagi/obagi-beforeandafter_4.jpg" alt="Obagi">
+	<br />
+	<div id="shop"><a href="https://www.skincarebyalana.com/obagi/obagi-elastiderm-collection.html">VIEW ELASTICDERM</a></div>
+	<br />
+	</div>
+</div>
+
+<br />
 	<div id="shop"><a href="https://www.skincarebyalana.com/obagi.html">Shop Obagi</a></div>
 </div>
 </div>
