--- a/obagi/testimonials.html
+++ b/obagi/testimonials.html
@@ -1,46 +1,37 @@
-<link rel="stylesheet" type="text/css" href="https://www.skincarebyalana.com/img/pages/catpage.css">
+ <link rel="stylesheet" type="text/css" href="https://www.skincarebyalana.com/img/pages/catpage.css">
 <div id="header">
 	<div id="back"><a href="https://www.skincarebyalana.com/obagi.html">BACK</a></div>
 	<h2>Testimonials</h2>
 	<img src="https://www.skincarebyalana.com/img/logos/obagi-logo.png" alt="Obagi Logo">
 </div>
 <div id="content">
-
+<br />
 <div>
 	
 <div class="row">
-	<img src="/img/pages/obagi/obagi-testimonials_1.jpg" alt=""><p>“I am wrapping up my first week of Obagi Nu-Derm and can already see and feel the difference in my skin. The texture and clarity of my skin has amazed not only me but my friends too! Obagi has given me hope.”
+	<img src="/img/pages/obagi/obagi-testimonials_1.jpg" alt=""><p>“I am wrapping up my first week of Obagi Nu-Derm and can already see and feel the difference in my skin. The texture and clarity of my skin has amazed not only me but my friends too! Obagi has given me hope.”</p>
 
-VIEW OBAGI NU-DERM HERE >></p>
+		<p><a href="https://www.skincarebyalana.com/obagi/obagi-nu-derm-systems.html">VIEW OBAGI NU-DERM HERE >></a></p>
 </div>
 <div class="row">
-	<img src="/img/pages/obagi/obagi-testimonials_2.jpg" alt=""><p>“My face glistens and is young and fresh. I shall continue to use Obagi products, specifically the Obagi-C Rx System for my skin, as my skin is in love with the product.”
+	<img src="/img/pages/obagi/obagi-testimonials_2.jpg" alt=""><p>“My face glistens and is young and fresh. I shall continue to use Obagi products, specifically the Obagi-C Rx System for my skin, as my skin is in love with the product.”</p>
 
-VIEW OBAGI-C RX HERE >>
+		<p><a href="https://www.skincarebyalana.com/obagi/obagi-c-rx-systems.html">VIEW OBAGI-C RX HERE >></a></p>
 
-</p>
+
 </div>
 <div class="row">
-	<img src="/img/pages/obagi/obagi-testimonials_3.jpg" alt=""><p>“Finally, a product that truly delivers amazing results! I no longer have to hide under makeup. I have waited so long to find something like this. It is almost a year since I became an Obagi user, and I’ve recently incorporated the Professional C-Serum into my daily regimen, and I love it!
-I will definitely be an Obagi user for life!”
-
-VIEW OBAGI PROFESSIONAL-C SERUMS HERE >></p>
+	<img src="/img/pages/obagi/obagi-testimonials_3.jpg" alt=""><p>“Finally, a product that truly delivers amazing results! I no longer have to hide under makeup. I have waited so long to find something like this. It is almost a year since I became an Obagi user, and I’ve recently incorporated the Professional C-Serum into my daily regimen, and I love it! <br />I will definitely be an Obagi user for life!”</p>
+		<p><a href="https://www.skincarebyalana.com/obagi/obagi-professional-c-portfolio.html">VIEW OBAGI PROFESSIONAL-C SERUMS HERE >></a></p>
 </div>
 <div class="row">
-	<img src="/img/pages/obagi/obagi-testimonials_4.jpg" alt=""><p>“The best thing about the [Obagi ELASTIderm] eye treatment is the results. I really couldn’t believe it. Many products say they will ‘lessen and eliminate wrinkles...’ but this product really does.”
+	<img src="/img/pages/obagi/obagi-testimonials_4.jpg" alt=""><p>“The best thing about the [Obagi ELASTIderm] eye treatment is the results. I really couldn’t believe it. Many products say they will ‘lessen and eliminate wrinkles...’ but this product really does.”</p>
+		<p><a href="https://www.skincarebyalana.com/obagi/obagi-elastiderm-collection.html">VIEW OBAGI ELASTIDERM EYE PRODUCTS HERE >></a></p>
 
-VIEW OBAGI ELASTIDERM EYE PRODUCTS HERE >>
-</p>
 </div>
 <div class="row">
-	<img src="/img/pages/obagi/obagi-testimonials_5.jpg" alt=""><p>“CLENZIderm has completely cleared my skin of acne in just a few short months. I leave my house without makeup with confidence that my skin looks great. I would never have done this before trying Obagi products. I would recommend them to anyone struggling with acne!”
-
-VIEW OBAGI CLENZIDERM M.D. SYSTEMS HERE >></p>
-</div>
-<div class="row">
-	<img src="/img/pages/obagi/obagi-testimonials_6.jpg" alt=""><p>“I had an Obagi Blue Peel a year ago and got the nicest compliment from my 18-year-old son. He said my skin felt so soft. It was nice to hear that from someone who doesn’t really pay attention to my skin issues.”
-
-VIEW OBAGI BLUE PEEL HERE >></p>
+	<img src="/img/pages/obagi/obagi-testimonials_5.jpg" alt=""><p>“CLENZIderm has completely cleared my skin of acne in just a few short months. I leave my house without makeup with confidence that my skin looks great. I would never have done this before trying Obagi products. I would recommend them to anyone struggling with acne!”</p>
+		<p><a href="https://www.skincarebyalana.com/obagi/obagi-clenziderm-md-systems.html">VIEW OBAGI CLENZIDERM M.D. SYSTEMS HERE >></a></p>
 </div>
 
 </div>
