--- a/karinherzog/karinherzog.html
+++ b/karinherzog/karinherzog.html
@@ -7,8 +7,8 @@
     <li><a href="https://www.skincarebyalana.com/karin-story">The Story</a></li>
     <li><a href="https://www.skincarebyalana.com/karin-science">The Science</a></li>
     <li><a href="https://www.skincarebyalana.com/karin-buzz">The Buzz</a></li>
-    <li><a href="https://www.skincarebyalana.com/">The FAQ's</a></li>
-    <li><a href="https://www.skincarebyalana.com/">Free Stuff</a></li>
+    <li><a href="https://www.skincarebyalana.com/karin-faq">The FAQ's</a></li>
+    <li><a href="https://www.skincarebyalana.com/karin-free">Free Stuff</a></li>
   </ul>
 </div>
 <div class="container">
